--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-top-loading-bar": "^2.1.0",
+    "react-usestateref": "^1.0.8",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
